--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -54,6 +54,54 @@
         "5":"Заполните пожалуйста",
         "6":"Отлично!",
         "7":"Пароли не совпадают!"
+    },
+
+    "Таблица": {
+        "1":"Логин",
+        "2":"Имя",
+        "3":"Фамилия",
+        "4":"Email",
+        "5":"Роль",
+        "6":"Пользователи",
+        "7":"Обновить",
+
+        "8":"{from}-{to} из {count}",
+        "9":"строк",
+        "10":"Строки на странице:",
+        "11": "Первая страница",
+          "12": "Первая страница",
+          "13": "Предыдущая страница",
+          "14": "Предыдущая страница",
+          "15": "Следующая страница",
+          "16": "Следующая страница",
+          "17": "Последняя страница",
+          "18": "Последняя страница",
+
+          "19": "{0} выбранная строка",
+          "20": "Поиск",
+          "21": "Поиск",
+          "22": "Экспорт",
+          "23": "Экспорт",
+          "24": "Экспорт в CSV",
+          "25": "Показать столбцы",
+          "26": "Показать столбцы",
+          "27": "Добавить или удалить столбцы",
+
+          "28": "Действия",
+
+          "29": "Перетащите заголовки ...",
+          "30": "Сгруппировано по:",
+
+          "31": "Нет записей для отображения",
+          "32": "Добавить",
+          "33": "Удалить",
+          "34": "Редактировать",
+          
+           "35": "Фильтр",
+
+          "36": "Вы уверены, что удалили эту строку?",
+          "37": "Отменить",
+          "38": "Сохранить"
     }
 
 }
