--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -47,6 +47,7 @@
         
     },
     "СообщенияРегистрация": {
+        "0":"Пользователь зарегистрирован!",
         "1":"Поздравляем пользователь зарегистрирован! Перенаправление...",
         "2":" пользоваьель существует!",
         "3":" Email существует!",
@@ -57,6 +58,7 @@
     },
 
     "Таблица": {
+        "0":"Создан",
         "1":"Логин",
         "2":"Имя",
         "3":"Фамилия",
@@ -99,7 +101,7 @@
           
            "35": "Фильтр",
 
-          "36": "Вы уверены, что удалили эту строку?",
+          "36": "Вы уверены, что хотите удалить эту строку?",
           "37": "Отменить",
           "38": "Сохранить"
     }
