--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -54,7 +54,8 @@
         "4":"Произошла ошибка попробуйте позже!",
         "5":"Заполните пожалуйста",
         "6":"Отлично!",
-        "7":"Пароли не совпадают!"
+        "7":"Пароли не совпадают!",
+        "8":"Заполните пожалуйста все поля которые помечены * !"
     },
 
     "Таблица": {
@@ -104,6 +105,12 @@
           "36": "Вы уверены, что хотите удалить эту строку?",
           "37": "Отменить",
           "38": "Сохранить"
+    },
+
+    "ТаблицаПрофайлы": {
+        "0":"Название",
+        "1":"Профайлы"
+
     }
 
 }
