--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -58,6 +58,11 @@
         "8":"Заполните пожалуйста все поля которые помечены * !"
     },
 
+    "СообщенияПрофайл": {
+        "0":"Профайл зарегистрирован!"
+       
+    },
+
     "Таблица": {
         "0":"Создан",
         "1":"Логин",
@@ -109,7 +114,12 @@
 
     "ТаблицаПрофайлы": {
         "0":"Название",
-        "1":"Профайлы"
+        "1":"Должности",
+        "2":"Орг. единица",
+        "3":"Пользователь",
+        "4":"Доступ",
+        "5":"Загрузка...",
+        "6":"Не найден!"
 
     }
 
