--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -121,6 +121,12 @@
         "5":"Загрузка...",
         "6":"Не найден!"
 
+    },
+    "ТаблицаОргЕдиница": {
+        "0":"Профайлы",
+        "1":"Должности/Орг.ед.",
+        "2":"Относится к",
+        "3":"Главная"
     }
 
 }
