--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -127,5 +127,9 @@
         "1":"Positions/Organ.",
         "2":"Refs to",
         "3":"Home"
+    },
+    "ТаблицаСтруктура": {
+        "0":"Structure"
+       
     }
 }
