--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -127,6 +127,10 @@
         "1":"Должности/Орг.ед.",
         "2":"Относится к",
         "3":"Главная"
+    },
+    "ТаблицаСтруктура": {
+        "0":"Структура"
+       
     }
 
 }
