--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -109,7 +109,9 @@
 
           "36": "Вы уверены, что хотите удалить эту строку?",
           "37": "Отменить",
-          "38": "Сохранить"
+          "38": "Сохранить",
+          "39": "Краткое содержание",
+          "40": "№"
     },
 
     "ТаблицаПрофайлы": {
@@ -126,11 +128,16 @@
         "0":"Профайлы",
         "1":"Должности/Орг.ед.",
         "2":"Относится к",
-        "3":"Главная"
+        "3":"Главная",
+        "4":"№ орг.единицы"
     },
     "ТаблицаСтруктура": {
         "0":"Структура"
        
+    },
+
+    "ТаблицаВнутренниеДокументы":{
+        "0":"Внутренние документы"
     }
 
 }
