--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -111,7 +111,8 @@
           "37": "Отменить",
           "38": "Сохранить",
           "39": "Краткое содержание",
-          "40": "№"
+          "40": "№",
+          "41": "Экспорт в PDF"
     },
 
     "ТаблицаПрофайлы": {
@@ -137,7 +138,8 @@
     },
 
     "ТаблицаВнутренниеДокументы":{
-        "0":"Внутренние документы"
+        "0":"Внутренние документы",
+        "1":"Получатель"
     }
 
 }
